--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,6 @@
 eclipse.preferences.version=1
+encoding//query/migrations/0001_initial.py=utf-8
+encoding//query/models.py=utf-8
+encoding//query/templates/index.html=UTF-8
 encoding//query/urls.py=utf-8
+encoding//query/views.py=utf-8
