--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,7 @@
 eclipse.preferences.version=1
+encoding//huang/templates/index.html=UTF-8
 encoding//query/migrations/0001_initial.py=utf-8
 encoding//query/models.py=utf-8
 encoding//query/urls.py=utf-8
 encoding//query/views.py=utf-8
+encoding/<project>=UTF-8
